[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/Teacher/ExerciseCreation.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="VBoxContainer1" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 248.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 757.0
margin_bottom = 586.0
rect_pivot_offset = Vector2( -621, 315 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.04

[node name="Title" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 505.0
margin_bottom = 14.0
text = "Exercise creation tool"

[node name="ExerciseTitle" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 505.0
margin_bottom = 32.0
text = "Exercise title"

[node name="ExerciseTitleEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 505.0
margin_bottom = 60.0

[node name="ExerciseDescription" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 505.0
margin_bottom = 78.0
text = "Exercise description"

[node name="ExerciseDescriptionEdit" type="TextEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 505.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( -815, -230 )

[node name="RandomValue" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 505.0
margin_bottom = 150.0
text = "Random value location (in memory cell)"

[node name="RandomValueEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 505.0
margin_bottom = 178.0

[node name="ResultLocation" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 505.0
margin_bottom = 196.0
text = "Result location (In register)"

[node name="ResultlocationEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 505.0
margin_bottom = 224.0

[node name="ResultValue" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 505.0
margin_bottom = 242.0
text = "Result value"

[node name="ResultValueEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 246.0
margin_right = 505.0
margin_bottom = 270.0

[node name="CycleConstraint" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 274.0
margin_right = 505.0
margin_bottom = 288.0
text = "Cycle constraint"

[node name="CycleConstraintEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 505.0
margin_bottom = 316.0

[node name="MustInstructions" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 505.0
margin_bottom = 334.0
text = "Must use instructions (seperate with comma)"

[node name="MustInstructionsEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 505.0
margin_bottom = 362.0

[node name="CorrectInput" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 505.0
margin_bottom = 380.0
text = "Correct input (there could be others)"

[node name="CorrectInputEdit" type="TextEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 384.0
margin_right = 505.0
margin_bottom = 434.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( -815, -230 )

[node name="CreateButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 438.0
margin_right = 505.0
margin_bottom = 458.0
text = "Create exercise"

[node name="BackButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 462.0
margin_right = 505.0
margin_bottom = 482.0
text = "Back"

[node name="Log" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 486.0
margin_right = 505.0
margin_bottom = 500.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 761.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
